[#161633431] updates google page

--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
         <script type="text/javascript" src="static/js/index.js"></script>
     </head>
     <body>
+        <header><p class="toplinks"><a href="#">Gmail</a><a href="#">Images</a></p></header>
         <div class="content">
             <img class="img" src="static/images/google.jpg"/>
             <form>
-                <input type="text" placeholder="Search Google or type a URL"/>
-                <button>search</button>
+                <input type="text" placeholder="Search Google or type a URL" x-webkit-speech /></br>
+                <button>Google Search</button><button>I'm Feeling Lucky</button>
             </form>
+            <p>Google offered in:<span class="lang"><a href="#">Luganda</a><a href="#">Kiswahili</a><a href="#">Ikinyarwanda</a><a href="#">Luo</a><a href="#">Runyakitara</a></span></p></br></br></br>
         </div>
+        <footer>
+            <div class="ug"><a href="#">Uganda</a></div></br><hr>
+            <div class="bottom"><a href="#">Advertising</a><a href="#">Business</a><a href="#">About</a><span class="right"><a href="#">Privacy</a><a href="#">Terms</a><a href="#">Settings</a></span></div>
+        </footer>
     </body>
 </html>
