[Delivers #161633431] updates google page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script type="text/javascript" src="static/js/index.js"></script>
     </head>
     <body class="body">
-        <header><p><a href="#">About</a><a href="#">Store</a><span class="toplinks"><a href="#">Gmail</a><a href="#">Images</a><span></span></p></header>
+        <header><p><a href="#">About</a><a href="#">Store</a><span class="toplinks"><a href="#">Gmail</a><a href="#">Images</a></p></header>
         <div class="content">
             <img class="img" src="static/images/google.jpg"/>
             <form>
